# constant-multiplication

./: Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: ci.yml
constant-multiplication/: Cargo.toml  build.rs  pyproject.toml
constant-multiplication/src/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
src/: lib.rs  main.rs
