[workspace]
resolver = "2"

members = [
    "constant-multiplication",
    "generator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
derive_more = {version = "2.1.1", features = ["display"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4_flex = "0.12"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true