[workspace]
resolver = "2"

members = ["constant-multiplication", "generator"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bincode = "1.3"
derive_more = { version = "2.1.1", features = ["display"] }
lz4_flex = "0.12"
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unsigned-varint = { version = "0.8", features = ["codec"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
