[workspace]
resolver = "2"

members = ["constant-multiplication", "generator"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Oscar Gustafsson <oscar.gustafsson@gmail.com>"]

[workspace.dependencies]
lz4_flex = "0.12"
pyo3 = { version = "0.27", features = ["extension-module"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unsigned-varint = { version = "0.8", features = ["codec"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
