[package]
name = "constant_multiplication"
version = "0.1.0"
edition = "2024"

[lib]
name = "constant_multiplication"
crate-type = ["cdylib"]

[dependencies]
bincode.workspace = true
lz4_flex.workspace = true
pyo3 = { version = "0.27", features = ["extension-module"] }
serde.workspace = true
unsigned-varint.workspace = true
