[package]
name = "constant_multiplication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "constant_multiplication"
crate-type = ["cdylib"]

[dependencies]
lz4_flex.workspace = true
pyo3 = { version = "0.27", features = ["extension-module"] }
unsigned-varint.workspace = true
