[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "constant-multiplication"
version = "0.1.0"
description = "Library to obtain efficient constant, shift-and-add-based, multipliers"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
keywords = ["constant multiplication", "shift-and-add"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "constant_multiplication"