[package]
name = "constant-multiplication-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode.workspace = true
derive_more.workspace = true
lz4_flex.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unsigned-varint.workspace = true
